--- a/index.html
+++ b/index.html
@@ -35,38 +35,38 @@
   <!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
 
   <section class="FrontPage">
-    <div class = "FrontPage__checkField">
-    <div class="FrontPage__checkFieldText">
-      <div class="FrontPage__checkBox">
-        <div class = "FrontPage__checkIcon">
-        <img src="img/check.svg">
-      </div>
-      <div class = "FrontPage__checkText">
-        <h3 class="FrontPage__checkBoxBigText">Ódýr og góð þjónusta</h3>
-        <p class="FrontPage__checkBoxText">Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.</p>
-      </div>
-    </div>
+    <div class="FrontPage__checkField">
+      <div class="FrontPage__checkFieldText">
+        <div class="FrontPage__checkBox">
+          <div class="FrontPage__checkIcon">
+            <img src="img/check.svg">
+          </div>
+          <div class="FrontPage__checkText">
+            <h3 class="FrontPage__checkBoxBigText">Ódýr og góð þjónusta</h3>
+            <p class="FrontPage__checkBoxText">Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.</p>
+          </div>
+        </div>
 
-      <div class="FrontPage__checkBox">
-        <div class = "FrontPage__checkIcon">
-        <img src="img/check.svg">
-      </div>
-      <div class = "FrontPage__checkText">
-        <h3 class="FrontPage__checkBoxBigText">Þægilegt í amstri dagsins</h3>
-        <p class="FrontPage__checkBoxText">Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.</p>
-      </div>
-    </div>
+        <div class="FrontPage__checkBox">
+          <div class="FrontPage__checkIcon">
+            <img src="img/check.svg">
+          </div>
+          <div class="FrontPage__checkText">
+            <h3 class="FrontPage__checkBoxBigText">Þægilegt í amstri dagsins</h3>
+            <p class="FrontPage__checkBoxText">Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.</p>
+          </div>
+        </div>
 
-      <div class="FrontPage__checkBox">
-        <div class = "FrontPage__checkIcon">
-        <img src="img/check.svg">
+        <div class="FrontPage__checkBox">
+          <div class="FrontPage__checkIcon">
+            <img src="img/check.svg">
+          </div>
+          <div class="FrontPage__checkText">
+            <h3 class="FrontPage__checkBoxBigText">Nauðsynlegt á hvert heimili</h3>
+            <p class="FrontPage__checkBoxText">Hvort sem er fyrir einstaklinga eða stórfjölskyldur.</p>
+          </div>
+        </div>
       </div>
-      <div class = "FrontPage__checkText">
-        <h3 class="FrontPage__checkBoxBigText">Nauðsynlegt á hvert heimili</h3>
-        <p class="FrontPage__checkBoxText">Hvort sem er fyrir einstaklinga eða stórfjölskyldur.</p>
-      </div>
-    </div>
-    </div>
       <div class="FrontPage__checkImageBox">
         <img src="img/image.jpg">
       </div>
@@ -79,8 +79,10 @@
         </div>
         <div class="FrontPage__userInfo">
           <h3 class="FrontPage__userQuote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</h3>
-          <h4 class="FrontPage__userName">Anna Jóns</h4>
-          <p class="FrontPage__userLength">Áskrifandi í þrjá mánuði</p>
+          <div class=FrontPage__userDetail>
+            <h4 class="FrontPage__userName">Anna Jóns</h4>
+            <p class="FrontPage__userLength">Áskrifandi í þrjá mánuði</p>
+          </div>
         </div>
       </div>
 
@@ -90,8 +92,10 @@
         </div>
         <div class="FrontPage__userInfo">
           <h3 class="FrontPage__userQuote">„Vá, þetta breytir öllu!“</h3>
-          <h4 class="FrontPage__userName">Siggi Páls</h4>
-          <p class="FrontPage__userLength">Áskrifandi í tvo daga</p>
+          <div class=FrontPage__userDetail>
+            <h4 class="FrontPage__userName">Siggi Páls</h4>
+            <p class="FrontPage__userLength">Áskrifandi í tvo daga</p>
+          </div>
         </div>
       </div>
 
@@ -101,8 +105,10 @@
         </div>
         <div class="FrontPage__userInfo">
           <h3 class="FrontPage__userQuote">„A+++, mun aldrei hætta í áskrift“</h3>
-          <h4 class="FrontPage__userName">Jón Guðrúnarson</h4>
-          <p class="FrontPage__userLength">Áskrifandi í ár</p>
+          <div class=FrontPage__userDetail>
+            <h4 class="FrontPage__userName">Jón Guðrúnarson</h4>
+            <p class="FrontPage__userLength">Áskrifandi í ár</p>
+          </div>
         </div>
       </div>
     </div>
