lagaði villu með index index að leka ut fyrir grindina

--- a/About.html
+++ b/About.html
@@ -6,11 +6,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700i|Roboto+Slab:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="grid.css">
   </head>
   
   <body>
   
-	<nav class="navigation">
+	<nav class="navigation margnifier">
 		<h1 class="navigation__title">Fooþjónustan</h1>
 		<div class="navigation__buttons">
 			 <button class="button button__extra_for_nav button__um" onclick="window.location.href='about.html'">Um</button>
@@ -18,7 +19,7 @@
 		</div>
 	</nav>
 
-	<header class="headder">
+	<header class="headder margnifier">
 		<div class="headder__content">
 		   <h3 class="headder__content__title">Um Fooþjónustuna</h3>
 		</div>
@@ -55,7 +56,7 @@
 				</div>
 	  </main>
 	
-	<footer class="footer">
+	<footer class="footer margnifier">
 		<div class="footer__info">
 			<div class="footer__info__address">
 				Fooþjónustan<br>
