Index, final touches

--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
       </div>
     </div>
 
+    <div class="center_button_for_conent">
+		<div class="indexlowerbutton">
+			<h3 class="indexlowerbutton__text">Eftir hverju ert þú að bíða?</h3>
+			<button class="button indexlowerbutton__button" onclick="window.location.href='kaupa.html'">Kaupa</button>
+		</div>
+	</div>
+
 
   </section>
 
