lagaði villur með html validator i index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="FrontPage__checkFieldText">
         <div class="FrontPage__checkBox">
           <div class="FrontPage__checkIcon">
-            <img src="img/check.svg">
+            <img src="img/check.svg" alt="checkmarker">
           </div>
           <div class="FrontPage__checkText">
             <h3 class="FrontPage__checkBoxBigText">Ódýr og góð þjónusta</h3>
@@ -49,7 +49,7 @@
 
         <div class="FrontPage__checkBox">
           <div class="FrontPage__checkIcon">
-            <img src="img/check.svg">
+            <img src="img/check.svg" alt="checkmarker">
           </div>
           <div class="FrontPage__checkText">
             <h3 class="FrontPage__checkBoxBigText">Þægilegt í amstri dagsins</h3>
@@ -59,7 +59,7 @@
 
         <div class="FrontPage__checkBox">
           <div class="FrontPage__checkIcon">
-            <img src="img/check.svg">
+            <img src="img/check.svg" alt="checkmarker">
           </div>
           <div class="FrontPage__checkText">
             <h3 class="FrontPage__checkBoxBigText">Nauðsynlegt á hvert heimili</h3>
@@ -68,14 +68,14 @@
         </div>
       </div>
       <div class="FrontPage__checkImageBox">
-        <img src="img/image.jpg">
+        <img src="img/image.jpg" alt="checkmarker">
       </div>
     </div>
 
     <div class="FrontPage__usersBox">
       <div class="FrontPage__userProfile">
         <div class="FrontPage__userImage">
-          <img src="img/profile1.jpg">
+          <img src="img/profile1.jpg" alt="annajons">
         </div>
         <div class="FrontPage__userInfo">
           <h3 class="FrontPage__userQuote">„Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“</h3>
@@ -88,7 +88,7 @@
 
       <div class="FrontPage__userProfile">
         <div class="FrontPage__userImage">
-          <img src="img/profile2.jpg">
+          <img src="img/profile2.jpg" alt="siggipals">
         </div>
         <div class="FrontPage__userInfo">
           <h3 class="FrontPage__userQuote">„Vá, þetta breytir öllu!“</h3>
@@ -101,7 +101,7 @@
 
       <div class="FrontPage__userProfile">
         <div class="FrontPage__userImage">
-          <img src="img/profile3.jpg">
+          <img src="img/profile3.jpg" alt="jonguðruns">
         </div>
         <div class="FrontPage__userInfo">
           <h3 class="FrontPage__userQuote">„A+++, mun aldrei hætta í áskrift“</h3>
