lagaði lint villur i indexContent og lika lagaði html validation i index

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700i|Roboto+Slab:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="grid.css">
 </head>
 
 <body>
   <!--NAVIGATION START-->
   <nav class="navigation">
-    <h1 class="navigation__title">Fooþjónustan</h1>
+    <h1 class="navigation__title" onclick="window.location.href='index.html'">Fooþjónustan</h1>
     <div class="navigation__buttons">
       <button class="button button__extra_for_nav button__um" onclick="window.location.href='about.html'">Um</button>
       <button class="button hidden button__extra_for_nav" onclick="window.location.href='kaupa.html'">Kaupa</button>
@@ -34,7 +33,7 @@
 
   <!-- ALL ABOVE THIS COMMENT IS READY NO NEED TO ALTER -->
 
-  <section class="FrontPage">
+  <main class="FrontPage">
     <div class="FrontPage__checkField">
       <div class="FrontPage__checkFieldText">
         <div class="FrontPage__checkBox">
@@ -122,7 +121,7 @@
 	</div>
 
 
-  </section>
+  </main>
 
 
 
