--- a/kaupa.html
+++ b/kaupa.html
@@ -6,13 +6,12 @@
     <title>Kaupa</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700i|Roboto+Slab:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="grid.css">
   </head>
   
   <body>
 	 
 	   <nav class="navigation margnifier">
-			<h1 class="navigation__title">Fooþjónustan</h1>
+			<h1 class="navigation__title" onclick="window.location.href='index.html'">Fooþjónustan</h1>
 			<div class="navigation__buttons">
 				 <button class="button button__extra_for_nav button__um" onclick="window.location.href='about.html'">Um</button>
 				 <button class="button hidden button__extra_for_nav" onclick="window.location.href='kaupa.html'">Kaupa</button>
